[package]
name = "cpunet_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git", branch = "cpunet", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
url = "2.4"
